--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -410,13 +410,13 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>1109 249 445 488 0 0 1680 1027 </string>
 	<key>NSWindow Frame SUAutomaticUpdateAlert</key>
-	<string>532 657 616 174 0 0 1680 1027 </string>
+	<string>1515 1712 616 174 863 1050 1920 1057 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>530 496 620 392 0 0 1680 1027 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>1192 1201 606 469 863 1050 1920 1057 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>361 547 928 394 0 0 1680 1027 </string>
+	<string>361 455 796 486 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>60 100 1610 788 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
@@ -1210,10 +1210,12 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-03-15T20:59:05Z</date>
+	<date>2019-03-22T13:16:11Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowBookmarkName</key>
+	<false/>
+	<key>ShowFullScreenTabBar</key>
 	<false/>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
